# twiki-to-mediawiki-xml

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yaml
twiki_to_mediawiki_xml/: __init__.py  mediawiki_xml_exporter.py  replace_rules.py  twiki_parser.py
twiki_to_mediawiki_xml/mediawiki_xml_exporter/: __init__.py
twiki_to_mediawiki_xml/scripts/: __init__.py  twiki_to_mediawiki_xml.py
twiki_to_mediawiki_xml/twiki_parser/: __init__.py
twiki_to_mediawiki_xml/twiki_to_mediawiki_format/: __init__.py  page_names_replace.py  subpages.py
