#
# pyproject.toml
# Created by Perry Naseck on 2022-05-23.
# This file is part of the https://github.com/ABTech/twiki-to-mediawiki-xml
#
# Copyright (C) 2022-present  AB Tech, Carnegie Mellon University
# Copyright (C) 2022          Perry Naseck (git@perrynaseck.com)
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

[build-system]
requires = ["setuptools>=62", "wheel", "setuptools_scm[toml]>=6.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
